@@ -1,3 +1,8 @@
+2011-09-19  Iain Sandoe  <iains@gcc.gnu.org>
+
+	Backport from mainline (restore powerpc-darwin Ada bootstrap).
+	* traceback.c (Darwin) USE_GCC_UNWINDER for Darwin versions >= 8.
+
 2011-09-11  Eric Botcazou  <ebotcazou@adacore.com>
 
 	* gcc-interface/decl.c (maybe_pad_type): Do not try to change the form
